# telegram_lib

./: .gitignore  README.md
.github/: FUNDING.yml
tdlib/: .gitignore  pubspec.yaml
tdlib/lib/packagex/: packagex.dart
tdlib/linux/packagex/: .gitignore
tdlib/linux/packagex/DEBIAN/: control  postinst  postrm
tdlib/linux/packagex/usr/share/applications/: tdlib.desktop
tdlib_android/: .gitignore  CMakeLists.txt  build-all.sh  build.sh  export.sh  td_json.cpp
